Discounts are now normalized

--- a/Resources/config/portal_discount_rule.yml
+++ b/Resources/config/portal_discount_rule.yml
@@ -1,6 +1,6 @@
 name: discount.portal
 description: discount.portal.description
-discount: '20'
+discount: 0.1
 startDate: 26-04-2012
 deadline: 26-04-2016
 createdAt: 26-04-2012
